--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,51 +62,38 @@
 
 .header {
   position: relative;
-}
-
-.header {
   display: block;
+  background: #212529;
 }
 
 .header_top {
   padding: 0;
-}
-
-.header_top {
   height: 40px;
-  background: var(--color-primary);
-  color: #fff;
   padding: 10px 0;
   font-weight: normal;
   font-size: 16px;
   position: relative;
 }
 
-.header_top__slogan {
+.header_top_slogan {
   text-align: center;
   position: absolute;
   left: 0;
   right: 0;
   margin: auto;
   font-family: "svgGilroy";
+  background: #dc3545;
 }
 
 .header_top__right {
   position: relative;
 }
 
-.header_top__right ul li {
-  height: 40px;
-  font-size: 16px;
-  line-height: 1;
-  position: relative;
-}
-
-.header_top__right ul li > a {
+.header_top__right a {
   height: 40px;
   display: inline-block;
 }
-.header_top__right ul li > a {
+.header_top__right a {
   color: #fff;
   display: inline-flex;
   align-items: center;
@@ -120,7 +107,7 @@ a {
   text-decoration: none;
   display: inline-block;
   background-color: transparent;
-  color: #0d6efd;
+  color: #fff;
   text-decoration: underline;
 }
 
@@ -215,4 +202,152 @@ ul {
   margin: 15px 0;
   font-size: 16px;
   display: block;
+}
+
+.SibarNavBar.right {
+  left: unset;
+  right: 0;
+  transform: translateX(100%);
+}
+
+.SibarNavBar {
+  width: 400px;
+  position: fixed;
+  top: 0;
+  background: #fff;
+  height: 100vh;
+  z-index: 10000;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateX(-100%);
+  transition: all 0.5s;
+}
+
+.SibarNavBar_filter {
+  position: relative;
+  height: 100%;
+}
+
+.SibarNavBar_filter .btn-close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  z-index: 9999;
+}
+
+.btn-close {
+  box-sizing: content-box;
+  width: 1em;
+  height: 1em;
+  padding: 0.25em 0.25em;
+  color: #000;
+  background: transparent
+    url(
+      data:image/svg + xml,
+      %3csvgxmlns="http://www.w3.org/2000/svg"viewBox="0 0 16 16"fill="%23000"%3e%3cpathd="M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z"/%3e%3c/svg%3e
+    )
+    center/1em auto no-repeat;
+  border: 0;
+  border-radius: 0.25rem;
+  opacity: 0.5;
+}
+
+.SibarNavBar_filter__body.body-sibar-login {
+  padding-top: 60px;
+  height: calc(100vh);
+  max-height: unset;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 40px;
+}
+
+.SibarNavBar_filter__body {
+  padding: 20px;
+  padding: 20px;
+  max-height: calc(100% - 145px);
+  overflow-y: auto;
+}
+
+.SibarNavBar_filter__body.body-sibar-login form {
+  width: 100%;
+}
+
+.SibarNavBar_filter__body.body-sibar-login .heading {
+  font-weight: bold;
+  font-size: 20px;
+  margin: 0 0 30px;
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.SibarNavBar_filter__body.body-sibar-login button {
+  border-radius: 3px;
+  width: 100%;
+  height: 55px;
+}
+
+.SibarNavBar_filter__body.body-sibar-login .form-control,
+.SibarNavBar_filter__body.body-sibar-login button {
+  border-radius: 3px;
+  width: 100%;
+  height: 55px;
+}
+
+.form-control {
+  font-size: 16px;
+  min-height: 48px;
+}
+
+.validate-error {
+  color: red;
+  margin: 5px 0;
+}
+
+.SibarNavBar_filter__body.body-sibar-login .btn_group_login {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.SibarNavBar_filter__body.body-sibar-login .btn_group_login .btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background: #fff;
+  border: 1px solid #ddd;
+  flex: 1 1;
+  border-radius: 3px;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.SibarNavBar_filter__body.body-sibar-login .btn_group_login .btn img {
+  margin-right: 10px;
 }
